Fix alignment

--- a/microservices/app/imports/client/pages/AppPage/SuperDashboard/SuperDashboard.scss
+++ b/microservices/app/imports/client/pages/AppPage/SuperDashboard/SuperDashboard.scss
@@ -9,11 +9,10 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    align-self: stretch;
 
-    width: 100%;
     margin-bottom: 32px;
     padding: 32px;
-
     background-color: $primary;
 
     h1,
@@ -135,9 +134,9 @@
           left: 0;
 
           background: linear-gradient(
-          to right,
-          rgba(0, 0, 0, 0.65) 0%,
-          rgba(0, 0, 0, 0) 100%
+            to right,
+            rgba(0, 0, 0, 0.65) 0%,
+            rgba(0, 0, 0, 0) 100%
           );
         }
       }
@@ -228,7 +227,7 @@
             }
           }
 
-           > * {
+          > * {
             margin: 0 !important;
             margin-bottom: 16px !important;
           }
